--- a/apps/calculator/manifest.plist
+++ b/apps/calculator/manifest.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://twombie.github.io/NXStore/apps/calculator/nexus_calculator.ipa</string>
+                    <string>https://github.com/TwombiE/NXStore/blob/a49c8bcd0c48e3977c138208f2cb2fdcffd91fd4/apps/calculator/nexus_calculator.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
